添加统计页面
